--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "express": "^4.18.2",
     "lottie-react": "^2.3.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
